src/objects/Apttus_Approval__Term_Exception_Approval__c.object
<CustomObject>
    <description>Required approvals for a given Term Exception</description>
    <fields>
        <fullName>Apttus_Approval__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This flag is true if the term exception approval record is active.  Set this to false if you want the approvals engine to ignore this term exception approver during processing.</description>
        <inlineHelpText>This flag is true if the term exception approval record is active.  Set this to false if you want the approvals engine to ignore this term exception approver during processing.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Assignee_Description__c</fullName>
        <description>The assignee description</description>
        <label>Assignee Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Assignee_Id__c</fullName>
        <description>This field holds the ID of the queue, role, or forecast role that is assigned to the request.  This field is not used when the assignee type is user.</description>
        <inlineHelpText>This field holds the ID of the queue, role, or forecast role that is assigned to the request.  This field is not used when the assignee type is user.</inlineHelpText>
        <label>Assignee Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Assignee_Type__c</fullName>
        <description>Denotes the assignee type</description>
        <label>Assignee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approval Matrix</fullName>
                </value>
                <value>
                    <fullName>Rule</fullName>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>Role</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Custom Assignee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Assignee_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to specify a user assignee using standard salesforce lookup behavior instead of having to type the user&apos;s name.  Using standard lookup prevents typing errors and ensures that the user is correctly assigned regardless of locale settings.</description>
        <inlineHelpText>Used to specify a user assignee using standard salesforce lookup behavior instead of having to type the user&apos;s name.  Using standard lookup prevents typing errors and ensures that the user is correctly assigned regardless of locale settings.</inlineHelpText>
        <label>Assignee User</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Term_Exception_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Assignee_Value__c</fullName>
        <description>Denotes the assignee type.  If the type is &apos;Role&apos;, this field is the role name.  For type Approval Matrix, this value is a string of the form &quot;Level X&quot;, where X ranges from 1 to 6.  This field is not used when the assignee type is user.</description>
        <inlineHelpText>Denotes the assignee type.  If the type is &apos;Role&apos;, this field is the role name.  For type Approval Matrix, this value is a string of the form &quot;Level X&quot;, where X ranges from 1 to 6.  This field is not used when the assignee type is user.</inlineHelpText>
        <label>Assignee Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__AutoEscalate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is set to true if this term exception approval should be auto-escalated by the system if it not approved, rejected, or reassigned by the expected completion date.</description>
        <inlineHelpText>This field is set to true if this term exception approval should be auto-escalated by the system if it not approved, rejected, or reassigned by the expected completion date.</inlineHelpText>
        <label>Auto Escalate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__DependsOn__c</fullName>
        <label>Depends On</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__EscalateToChain__c</fullName>
        <description>The chain of user ids that this request will get escalated to in the event that it is escalated. This chain is determined when the request is initially submitted and is only applicable to dynamic escalation types.</description>
        <inlineHelpText>The chain of user ids that this request will get escalated to in the event that it is escalated. This chain is determined when the request is initially submitted and is only applicable to dynamic escalation types.</inlineHelpText>
        <label>Escalate To Chain</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__EscalateToId__c</fullName>
        <description>The id of the assignee the request will be escalated to if it is escalated at the term exception approval level.</description>
        <inlineHelpText>The id of the assignee the request will be escalated to if it is escalated at the term exception approval level.</inlineHelpText>
        <label>Escalate To Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__EscalateToName__c</fullName>
        <description>The name of the assignee the request will be escalated to if it is escalated at the term exception approval level.</description>
        <inlineHelpText>The name of the assignee the request will be escalated to if it is escalated at the term exception approval level.</inlineHelpText>
        <label>Escalate To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__EscalateToType__c</fullName>
        <description>The type of assignee the request will be escalated to if it is escalated at the term exception approval level.</description>
        <inlineHelpText>The type of assignee the request will be escalated to if it is escalated at the term exception approval level.</inlineHelpText>
        <label>Escalate To Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Backup Admin User</fullName>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>Related User</fullName>
                </value>
                <value>
                    <fullName>Role</fullName>
                </value>
                <value>
                    <fullName>Rule</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>User Approval Matrix Next Approver</fullName>
                </value>
                <value>
                    <fullName>User Delegated Approver</fullName>
                </value>
                <value>
                    <fullName>User Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ExpectedDaysToComplete__c</fullName>
        <description>The number of expected days that this term exception approval needs to be completed in (approved or rejected) before a request is automatically escalated.</description>
        <inlineHelpText>The number of expected days that this term exception approval needs to be completed in (approved or rejected) before a request is automatically escalated.</inlineHelpText>
        <label>Expected Days To Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ExpectedHoursToComplete__c</fullName>
        <description>The number of expected hours that this term exception approval needs to be completed in (approved or rejected) before a request is automatically escalated.</description>
        <inlineHelpText>The number of expected hours that this term exception approval needs to be completed in (approved or rejected) before a request is automatically escalated.</inlineHelpText>
        <label>Expected Hours To Complete</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ExpectedMinutesToComplete__c</fullName>
        <description>The number of expected minutes that this term exception approval needs to be completed in (approved or rejected).</description>
        <inlineHelpText>The number of expected minutes that this term exception approval needs to be completed in (approved or rejected).</inlineHelpText>
        <label>Expected Minutes To Complete</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__FilterLogic__c</fullName>
        <description>The criteria filter logic expression</description>
        <label>Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Notify_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates whether the approver receives a notification only for the approval request (when set to true) or gets the request assigned to them and receives notification as well (false, which is the default).</description>
        <inlineHelpText>Designates whether the approver receives a notification only for the approval request (when set to true) or gets the request assigned to them and receives notification as well (false, which is the default).</inlineHelpText>
        <label>Notify Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Send_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether an email notification should be sent</description>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Sequence__c</fullName>
        <description>The approval sequence</description>
        <label>Sequence</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SkipUnresolvedAssignee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this box is checked if the assignee cannot be resolved at runtime then the step will be skipped instead of getting assigned to the Backup Admin.</description>
        <inlineHelpText>When this box is checked if the assignee cannot be resolved at runtime then the step will be skipped instead of getting assigned to the Backup Admin.</inlineHelpText>
        <label>Skip Unresolved Assignee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Term_Exception__c</fullName>
        <description>Denotes the term exception master record associated with this term exception approver record.</description>
        <inlineHelpText>Denotes the term exception master record associated with this term exception approver record.</inlineHelpText>
        <label>Term Exception</label>
        <referenceTo>Apttus__Term_Exception__c</referenceTo>
        <relationshipLabel>Term Exception Approvals</relationshipLabel>
        <relationshipName>Approvals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Term Exception Approval</label>
    <listViews>
        <fullName>Apttus_Approval__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Approval__Term_Exception__c</columns>
        <columns>Apttus_Approval__Assignee_Type__c</columns>
        <columns>Apttus_Approval__Assignee_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TEA-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Term Exception Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>